--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ a {
 
 button {
     border-radius: 15px;
-    background-color: brown;
+    background-color: rgb(140, 42, 165);
     color: white;
     cursor: pointer;
     padding: 2px 10px;
